# sxm-client

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  conftest.py  dev-requirements.txt  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  sxm.py  tox.ini
.bin/: format-code  lint-code  update-requirements
.devcontainer/: Dockerfile  devcontainer.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: api.rst  conf.py  index.rst  installation.rst  installation_pip.rst  usage.rst
sxm/: __init__.py  __init__.pyi  __main__.py  __main__.pyi  cli.py  cli.pyi  client.py  client.pyi  http.py  http.pyi  models.py  models.pyi
sxm/http/: __init__.py  asynchronous.py  synchronous.py
tests/: test_models.py
tests/sample_data/: xm_live_channel.json
